Fix tab icons not visible on inactive tabs

--- a/theme-customizations.css
+++ b/theme-customizations.css
@@ -212,7 +212,7 @@ button.red-ui-typedInput-option-trigger .red-ui-typedInput-option-label img {
 /*
 * SVG images
 */
-.red-ui-tabs ul li.active img.red-ui-tab-icon {
+.red-ui-tabs ul li img.red-ui-tab-icon {
   filter: brightness(0) saturate(100%) invert(56%) sepia(97%) saturate(17%) hue-rotate(13deg) brightness(99%) contrast(95%);
 }
 
